@@ -1,5 +1,6 @@
 2010-10-08  Kirit Saelensminde  <kirit@felspar.com>
  fostlib::email_address instances can now be coerced from their JSON representation.
+ A new attach member on fostlib::mime_envelope allows for easier addition of mime types into the envelope.
 
 2010-09-24  Kirit Saelensminde  <kirit@felspar.com>
  Errors connecting to sockets are now reported as instances of fostlib::exceptions::connect_failure. Socket errors are now all sub-classes of fostlib::exceptions::socket_error. Reads now also time out and throw a fostlib::exceptions::read_timout exception. The configuration setting
